added markups, adjusted font size

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
                     <img src="assets/hero-img.jpg" alt="A Developer">
                 </picture>
                 <h1 class="hero-title">
-                    Hi, my name is<br /> Praveen Kumaravel. I am a full stack web developer who wants to create things
-                    that
-                    make a difference.
+                    Hi, my name is<br /> Praveen Kumaravel. I am a full stack web developer based in Chennai, India.
+                    <br> Highly experienced in developing modern Single Page Applications.
                 </h1>
             </section>
             <div class="main-paragraph">
@@ -32,6 +31,49 @@
                     big
                     business</p>
             </div>
+        </section>
+        <section class="roles">
+            <div class="card">
+                <h3>Front End Developer</h3>
+                <p>
+                    I like to make clean and simple UI that bring ideas to life.
+                </p>
+                <h4>Skills I learnt:</h4>
+                <p>React, HTML, CSS, SASS, Javascript, Svelte, Angular, Jest, Enzyme, Cypress</p>
+            </div>
+            <div class="card">
+                <h3>Backend Developer</h3>
+                <p>
+                    Over the years, I learnt to write powerful, highly performant backend
+                    that scale well on modern platforms
+                </p>
+                <h4>Gained expertise on:</h4>
+                <p>Java, Nodejs, Spring Boot, Mule ESB, NoSQL and SQL based databases, websocket,
+                    Spring Batch, JUnit,
+                </p>
+            </div>
+            <div class="card">
+                <h3>Devops</h3>
+                <p>
+                    I familiarized myself with modern CI/CD practices
+                </p>
+                <h4>Technologies known:</h4>
+                <p>Docker, Kubernetes, Jenkins, Gitlab CI/CD</p>
+            </div>
+        </section>
+        <section class="journey">
+            <h4>I am proud to have worked with some awesome companies.</h4>
+            <article>
+                <div class="header">
+                    <h3>Tata Consultancy Services</h3>
+                    <time>2016-2019</time>
+                    <span>Backend Developer | Java, Mule ESB</span>
+                </div>
+                <div class="content">
+                    <p>
+                    </p>
+                </div>
+            </article>
         </section>
     </main>
 </body>
