--- a/index.html
+++ b/index.html
@@ -62,124 +62,136 @@
             </div>
         </section>
         <section class="journey">
-            <h4>I am proud to have worked with some awesome companies.</h4>
-            <article>
-                <div class="header">
-                    <h3>Tata Consultancy Services</h3>
-                    <time>2016-2019</time>
-                    <span>Backend Developer</span>
-                    <ul class="pills">
-                        <li class="pill">Java</li>
-                        <li class="pill">Spring Boot</li>
-                        <li class="pill">JUnit</li>
-                        <li class="pill">Mockito</li>
-                        <li class="pill">RESTful</li>
-                        <li class="pill">Mule ESB</li>
-                        <li class="pill">Dataweave</li>
-                        <li class="pill">ActiveMQ</li>
-                        <li class="pill">Spring Batch</li>
-                        <li class="pill">Oracle SQL</li>
-                        <li class="pill">Git</li>
-                        <li class="pill">Bitbucket</li>
-                        <li class="pill">Jira</li>
-                        <li class="pill">Splunk</li>
-                        <li class="pill">Shell Scripting</li>
-                    </ul>
-                </div>
-                <div class="content">
-                    <p>
-                        Joined as a trainee who just graduated and worked for a banking client.
-                        My first project involved analyzing a legacy spring application and rewriting it
-                        with <strong>spring boot</strong>, modularizing into
-                        <strong>micro services</strong> that cater multiple client apps.
-                        My role, primarily was to develop RESTful APIs based on the specs. <br />
-                        Later, I taught myself to work with <strong>Mule ESB</strong> and integrate
-                        multiple REST APIs.<br>
-                        As I gained more skills and reputation, I moved to contribute to a more critical
-                        project that helped banking customers to login and manage their mortgage bank accounts.
-                        This was a rewrite too, from the boring monolithic application to the more fun Microservice
-                        based
-                        Single Page App. My role was to develop RESTful APIs based SLAs using Spring Boot and Mule ESB.
-                        I also got to work on critical batch jobs using <strong>Spring Batch</strong>, analyze and fix
-                        performance issues when the app was
-                        used in realtime by huge volumes of users. Our team was responsible for the entire app, right up
-                        to the production environment.<br/>
-                        All the applications ran on on-prem server machines.
-                    </p>
-                    <p>It was a great fun-filled learning experience with Tata Consultancy Services,
-                         where I learnt the fundamentals about backend of modern web applications</p>
-                </div>
-            </article>
-            <article>
-                <div class="header">
-                    <h3>Verizon, India</h3>
-                    <time>2019-Present</time>
-                    <span>Fullstack Developer</span>
-                    <ul class="pills">
-                        <li class="pill">Javascript</li>
-                        <li class="pill">CSS</li>
-                        <li class="pill">React</li>
-                        <li class="pill">HTML</li>
-                        <li class="pill">Jest</li>
-                        <li class="pill">Enzyme</li>
-                        <li class="pill">Nodejs</li>
-                        <li class="pill">Mocha</li>
-                        <li class="pill">Sinonjs</li>
-                        <li class="pill">Chai</li>
-                        <li class="pill">Docker</li>
-                        <li class="pill">Kubernetes</li>
-                        <li class="pill">Postgres</li>
-                        <li class="pill">Mongodb</li>
-                        <li class="pill">Git</li>
-                        <li class="pill">Gitlab</li>
-                        <li class="pill">Jenkins</li>
-                        <li class="pill">Jira</li>
-                    </ul>
-                </div>
-                <div class="content">
-                    <p>
-                        Moved on to start learning front end application frameworks.
-                        I started contributing to the development of a ticketing tool for Verizon. It was
-                        a major rewrite, primarily of the UI from Anglular to <strong>React</strong>.
-                        My role involved development of complex UI components to legibly present complex
-                        data that served technicians to monitor tickets and fix them.
-                        I gained good experience in making different kinds of table components and forms
-                        that present large volumes of data. I also occasionaly contributed to creating
-                        and tweaking microservices written using <strong>Nodejs</strong><br />
-                        Later I moved on to another project where I contributed to the development of a 
-                        new application that encapsulated the functionalities of multiple legacy apps.
-                        My role was to develop dashboards with widgets that were developed with the 
-                        intent of making every asset of the application <strong>reusable</strong> and ready to be plugged
-                        in to any app that ran on the same ecosystem.
-                        I had also contributed to the implementation of REST apis using Nodejs.
-                        With my expertise on react, I worked on making the front end application
-                        more performant, analyzed and <strong>fixed
-                        performance issues</strong>, leveraging the latest features provided by the framework.
-                        After I gained expertise on different stacks of the application, I started <strong>managing
-                        PRs, maintained several repositories</strong> and played a part on 
-                        <strong>making technical design 
-                        decisions</strong> for new features.
-                        I also got to work on creating and managing containers with Docker and Kubernetes, and
-                        also contributed to creating CI/CD pipelines using Jenkins.
-                        I then moved on to another project that was critical to running the business.
-                        My role was to develop UI components, majority of which dealt with creating forms 
-                        to query huge volumes of realtime data from druid. The data was presented on 
-                        a wide range of UI elements ranging from primitive tables and forms to more complex
-                        UI elements like maps.
-                    </p>
-                    <p>It was when working for Verizon, where I found my true passion towards coding on
-                        different stacks of modern web applications.
-                    </p>
-                </div>
-            </article>
+            <h3 class="intro-line">I am proud to have worked with some awesome companies</h4>
+                <article class="story">
+                    <div class="header">
+                        <h3>Tata Consultancy Services</h3>
+                        <time>2016-2019</time>
+                        <span>Backend Developer</span>
+                        <ul class="pills">
+                            <li class="pill">Java</li>
+                            <li class="pill">Spring Boot</li>
+                            <li class="pill">JUnit</li>
+                            <li class="pill">Mockito</li>
+                            <li class="pill">RESTful</li>
+                            <li class="pill">Mule ESB</li>
+                            <li class="pill">Dataweave</li>
+                            <li class="pill">ActiveMQ</li>
+                            <li class="pill">Spring Batch</li>
+                            <li class="pill">Oracle SQL</li>
+                            <li class="pill">Git</li>
+                            <li class="pill">Bitbucket</li>
+                            <li class="pill">Jira</li>
+                            <li class="pill">Splunk</li>
+                            <li class="pill">Shell Scripting</li>
+                        </ul>
+                    </div>
+                    <div class="content">
+                        <p>
+                            Joined as a trainee who just graduated and worked for a banking client.
+                            My first project involved analyzing a legacy spring application and rewriting it
+                            with <strong>spring boot</strong>, modularizing into
+                            <strong>micro services</strong> that cater multiple client apps.
+                            My role, primarily was to develop RESTful APIs based on the specs. <br />
+                            Later, I taught myself to work with <strong>Mule ESB</strong> and integrate
+                            multiple REST APIs.
+                        </p>
+                        <p>
+                            As I gained more skills and reputation, I moved to contribute to a more critical
+                            project that helped banking customers to login and manage their mortgage bank accounts.
+                            This was a rewrite too, from the boring monolithic application to the more fun Microservice
+                            based
+                            Single Page App. My role was to develop RESTful APIs based SLAs using Spring Boot and Mule
+                            ESB.
+                            I also got to work on critical batch jobs using <strong>Spring Batch</strong>, analyze and
+                            fix
+                            performance issues when the app was
+                            used in realtime by huge volumes of users. Our team was responsible for the entire app,
+                            right up
+                            to the production environment.
+                        </p>
+                        <p>
+                            All the applications ran on on-prem server machines.
+                        </p>
+                        <p>It was a great fun-filled learning experience with Tata Consultancy Services,
+                            where I learnt the fundamentals about backend of modern web applications</p>
+                    </div>
+                </article>
+                <article class="story">
+                    <div class="header">
+                        <h3>Verizon, India</h3>
+                        <time>2019-Present</time>
+                        <span>Fullstack Developer</span>
+                        <ul class="pills">
+                            <li class="pill">Javascript</li>
+                            <li class="pill">CSS</li>
+                            <li class="pill">React</li>
+                            <li class="pill">HTML</li>
+                            <li class="pill">Jest</li>
+                            <li class="pill">Enzyme</li>
+                            <li class="pill">Nodejs</li>
+                            <li class="pill">Mocha</li>
+                            <li class="pill">Sinonjs</li>
+                            <li class="pill">Chai</li>
+                            <li class="pill">Docker</li>
+                            <li class="pill">Kubernetes</li>
+                            <li class="pill">Postgres</li>
+                            <li class="pill">Mongodb</li>
+                            <li class="pill">Git</li>
+                            <li class="pill">Gitlab</li>
+                            <li class="pill">Jenkins</li>
+                            <li class="pill">Jira</li>
+                        </ul>
+                    </div>
+                    <div class="content">
+                        <p>
+                            Moved on to start learning front end application frameworks.
+                            I started contributing to the development of a ticketing tool for Verizon. It was
+                            a major rewrite, primarily of the UI from Anglular to <strong>React</strong>.
+                            My role involved development of complex UI components to legibly present complex
+                            data that served technicians to monitor tickets and fix them.
+                            I gained good experience in making different kinds of table components and forms
+                            that present large volumes of data. I also occasionaly contributed to creating
+                            and tweaking microservices written using <strong>Nodejs</strong>
+                        </p>
+                        <p>
+                            Later I moved on to another project where I contributed to the development of a
+                            new application that encapsulated the functionalities of multiple legacy apps.
+                            My role was to develop dashboards with widgets that were developed with the
+                            intent of making every asset of the application <strong>reusable</strong> and ready to be
+                            plugged
+                            in to any app that ran on the same ecosystem.
+                            I had also contributed to the implementation of REST apis using Nodejs.
+                            With my expertise on react, I worked on making the front end application
+                            more performant, analyzed and <strong>fixed
+                                performance issues</strong>, leveraging the latest features provided by the framework.
+                            After I gained expertise on different stacks of the application, I started <strong>managing
+                                PRs, maintained several repositories</strong> and played a part on
+                            <strong>making technical design
+                                decisions</strong> for new features.
+                            I also got to work on creating and managing containers with Docker and Kubernetes, and
+                            also contributed to creating CI/CD pipelines using Jenkins.
+                        </p>
+                        <p>
+                            I then moved on to another project that was critical to running the business.
+                            My role was to develop UI components, majority of which dealt with creating forms
+                            to query huge volumes of realtime data from druid. The data was presented on
+                            a wide range of UI elements ranging from primitive tables and forms to more complex
+                            UI elements like maps.
+                        </p>
+                        <p>It was when working for Verizon, where I found my true passion towards coding on
+                            different stacks of modern web applications.
+                        </p>
+                    </div>
+                </article>
         </section>
         <footer>
-            <div class="card">
-            <h2>Want to get in touch with me?</h2>
-            <p>If you find my journey interesting and beleive that I can help your company grow, do say hello to
-                me.
-            </p>
-        </div>
+            <div>
+                <h2>Want to get in touch with me?</h2>
+                <p>If you find my journey interesting and beleive that I can help your company grow, do say hello to
+                    me.
+                </p>
+            </div>
         </footer>
     </main>
 </body>
