added profile image and contacts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Praveen Kumaravel</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 
 <body>
@@ -13,7 +15,7 @@
         <section class="intro">
             <section class="hero">
                 <picture class="hero-img">
-                    <img src="assets/hero-img.jpg" alt="A Developer">
+                    <img src="assets/hero.jpg" alt="A photo of me">
                 </picture>
                 <h1 class="hero-title">
                     Hi, my name is<br /> Praveen Kumaravel. I am a full stack web developer based in Chennai, India.
@@ -88,7 +90,7 @@
                     </div>
                     <div class="content">
                         <p>
-                            Joined as a trainee who just graduated and worked for a banking client.
+                            Joined as a trainee who just graduated and began by working for a banking client.
                             My first project involved analyzing a legacy spring application and rewriting it
                             with <strong>spring boot</strong>, modularizing into
                             <strong>micro services</strong> that cater multiple client apps.
@@ -191,6 +193,15 @@
                 <p>If you find my journey interesting and beleive that I can help your company grow, do say hello to
                     me.
                 </p>
+                <ul class="contacts">
+                    <li class="contact-info"><a href="mailto:thisispraveenk@gmail.com"><i
+                                class="far fa-envelope fa-3x"></i></a></li>
+                    <li class="contact-info"><a href="https://github.com/praveen1994kp"><i
+                                class="fab fa-github fa-3x"></i></i></a></li>
+                    <li class="contact-info"><a href="https://www.linkedin.com/in/this-is-praveen-k/"><i
+                                class="fab fa-linkedin fa-3x"></i></a>
+                    </li>
+                </ul>
             </div>
         </footer>
     </main>
