--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <script src="main.js" defer></script>
 </head>
 
-<body>
+<body class="dark accent__pink">   
+    <header>
+        <ul class="control-group">
+            <li id='theme-toggle'><i class="fas fa-sun fa-2x"></i></li>
+        </ul>
+    </header>
     <main class="app-container">
         <section class="intro">
             <section class="hero">
