--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <header>
         <ul class="control-group">
             <li id='theme-toggle'><i class="fas fa-sun fa-2x"></i></li>
+            <li id='accent-toggle'><i class="fas fa-palette fa-2x"></i></li>
         </ul>
     </header>
     <main class="app-container">
@@ -200,8 +201,11 @@
                     me.
                 </p>
                 <ul class="contacts">
-                    <li class="contact-info"><a href="mailto:thisispraveenk@gmail.com"><i
-                                class="far fa-envelope fa-3x"></i></a></li>
+                    <li class="contact-info email">
+                        <a href="mailto:thisispraveenk@gmail.com"><i
+                                class="far fa-envelope fa-3x"></i></a>
+                        <div class="on-hover"><span>thisispraveenk@gmail.com</span></div>
+                            </li>
                     <li class="contact-info"><a href="https://github.com/praveen1994kp"><i
                                 class="fab fa-github fa-3x"></i></i></a></li>
                     <li class="contact-info"><a href="https://www.linkedin.com/in/this-is-praveen-k/"><i
