copy email on click

--- a/public/index.html
+++ b/public/index.html
@@ -194,6 +194,7 @@
                     </div>
                 </article>
         </section>
+        <div id='toast' class="toast-container"></div>
         <footer>
             <div>
                 <h2>Want to get in touch with me?</h2>
