--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                 </picture>
                 <h1 class="hero-title">
                     Hi, my name is<br /> Praveen Kumaravel. I am a full stack web developer based in Chennai, India.
-                    <br> Highly experienced in developing modern Single Page Applications.
+                    <br> Highly experienced in developing modern Web Applications.
                 </h1>
             </section>
             <div class="main-paragraph">
