open links in new tab

--- a/public/index.html
+++ b/public/index.html
@@ -203,13 +203,13 @@
                 </p>
                 <ul class="contacts">
                     <li class="contact-info email">
-                        <a href="mailto:thisispraveenk@gmail.com"><i
+                        <a target="_blank" href="mailto:thisispraveenk@gmail.com"><i
                                 class="far fa-envelope fa-3x"></i></a>
                         <div class="on-hover"><span>thisispraveenk@gmail.com</span></div>
                             </li>
-                    <li class="contact-info"><a href="https://github.com/praveen1994kp"><i
+                    <li class="contact-info"><a target="_blank" href="https://github.com/praveen1994kp"><i
                                 class="fab fa-github fa-3x"></i></i></a></li>
-                    <li class="contact-info"><a href="https://www.linkedin.com/in/this-is-praveen-k/"><i
+                    <li class="contact-info"><a target="_blank" href="https://www.linkedin.com/in/this-is-praveen-k/"><i
                                 class="fab fa-linkedin fa-3x"></i></a>
                     </li>
                 </ul>
