--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <script src="main.js" defer></script>
 </head>
 
-<body class="dark accent__pink">   
+<body class="dark accent__green">   
     <header>
         <ul class="control-group">
             <li id='theme-toggle'><i class="fas fa-sun fa-2x"></i></li>
@@ -59,7 +59,7 @@
                     I like to make clean and simple UI that bring ideas to life.
                 </p>
                 <h4>Skills I learnt:</h4>
-                <p>React, HTML, CSS, SASS, Javascript, Svelte, Angular, Jest, Enzyme, Cypress</p>
+                <p>React, HTML, CSS, SASS, Javascript, Svelte, Angular, Jest, Cypress</p>
             </div>
             <div class="card">
                 <h3>Backend Developer</h3>
@@ -69,8 +69,16 @@
                 </p>
                 <h4>Gained expertise on:</h4>
                 <p>Java, Nodejs, Spring Boot, Mule ESB, NoSQL and SQL based databases, websocket,
-                    Spring Batch, JUnit,
+                    Spring Batch, JUnit
                 </p>
+            </div>
+            <div class="card">
+                <h3>Quality Engineer</h3>
+                <p>
+                    Learnt to write powerful automation scripts to do end-to-end testing of web applications.
+                </p>
+                <h4>Skills I learnt:</h4>
+                <p>Cypress, Qtest</p>
             </div>
             <div class="card">
                 <h3>Devops</h3>
@@ -146,9 +154,9 @@
                             <li class="pill">Javascript</li>
                             <li class="pill">CSS</li>
                             <li class="pill">React</li>
+                            <li class="pill">Cypress</li>
                             <li class="pill">HTML</li>
                             <li class="pill">Jest</li>
-                            <li class="pill">Enzyme</li>
                             <li class="pill">Nodejs</li>
                             <li class="pill">Mocha</li>
                             <li class="pill">Sinonjs</li>
@@ -198,6 +206,19 @@
                             to query huge volumes of realtime data from druid. The data was presented on
                             a wide range of UI elements ranging from primitive tables and forms to more complex
                             UI elements like maps.
+                        </p>
+                        <p>
+                            I worked on a major rewrite of a ticketing platform used by Verizon's Network Technicians.
+                             The rewrite involved developing intuitive dashboards and forms.
+                             The requirements were highly sophisticated,
+                              and involved provisions to administer how the platform behaves to targeted user groups.
+                               It was a great success, leveraging all the features provided by modern technical stack.
+
+                        </p>
+                        <p>
+                            My role also involved owning the end-to-end delivery of the features I was responsible for,
+                             which meant I had to write automated testing scripts using Cypress
+                              to validate the features on all environments. 
                         </p>
                         <p>It was when working for Verizon, where I found my true passion towards coding on
                             different stacks of modern web applications.
