--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <img src="assets/hero.jpg" alt="A photo of me">
                 </picture>
                 <h1 class="hero-title">
-                    Hi, my name is<br /> Praveen Kumaravel. I am a full stack web developer based in Chennai, India.
+                    Hi, my name is Praveen Kumaravel. I am a full stack web developer based in Chennai, India.
                     <br> Highly experienced in developing modern Web Applications.
                 </h1>
             </section>
@@ -163,10 +163,12 @@
                             <li class="pill">Jest</li>
                             <li class="pill">Nodejs</li>
                             <li class="pill">Mocha</li>
-                            <li class="pill">Sinonjs</li>
-                            <li class="pill">Chai</li>
                             <li class="pill">Docker</li>
                             <li class="pill">Kubernetes</li>
+                            <li class="pill">Java</li>
+                            <li class="pill">Apache Pulsar</li>
+                            <li class="pill">Sinonjs</li>
+                            <li class="pill">Chai</li>
                             <li class="pill">Postgres</li>
                             <li class="pill">Mongodb</li>
                             <li class="pill">Git</li>
@@ -207,7 +209,7 @@
                         <p>
                             I then moved on to another project that was critical to running the business.
                             My role was to develop UI components, majority of which dealt with creating forms
-                            to query huge volumes of realtime data from druid. The data was presented on
+                            to query huge volumes of realtime data. The data was presented on
                             a wide range of UI elements ranging from primitive tables and forms to more complex
                             UI elements like maps.
                         </p>
@@ -220,9 +222,19 @@
 
                         </p>
                         <p>
+                            My impact over the project and the business widened when I played a critical role in the ticketing 
+                            platform rewrite. I got the oppurtunity to interact with product owners and come up with project requirements 
+                            and architect innovative solutions to impement them. I got to contribute to a versatile stack of technologies
+                            and maintained all of the repositories.
+                        </p>
+                        <p>
                             My role also involved owning the end-to-end delivery of the features I was responsible for,
                              which meant I had to write automated testing scripts using Cypress
                               to validate the features on all environments. 
+                        </p>
+                        <p>I also got to work with young talents and help them grow with me. My way of mentoring mainly involved
+                            providing extensive code review comments and conducting sessions to enforce good coding practices, whilst 
+                            also explaining the need for such standards.
                         </p>
                         <p>It was when working for Verizon, where I found my true passion towards coding on
                             different stacks of modern web applications.
